Converted to akka for networking