@@ -2,8 +2,6 @@
 package edu.colorado.phet.simsharing;
 
 import akka.actor.Actor;
-import akka.actor.ActorRef;
-import akka.actor.Actors;
 import akka.actor.UntypedActor;
 import akka.japi.Creator;
 
@@ -14,13 +12,23 @@ import static akka.actor.Actors.remote;
  * @author Sam Reid
  */
 public class Server {
+    private Object dataSample;
+
     public static void main( String[] args ) {
-        final ActorRef teacherActor = Actors.remote().actorFor( "teacher", Config.teacherIP, Config.TEACHER_PORT );
+        new Server().start();
+    }
+
+    private void start() {
         remote().start( Config.serverIP, Config.SERVER_PORT ).register( "server", actorOf( new Creator<Actor>() {
             public Actor create() {
                 return new UntypedActor() {
                     public void onReceive( Object o ) {
-                        teacherActor.sendOneWay( o );
+                        if ( o instanceof TeacherDataRequest ) {
+                            getContext().replySafe( dataSample );
+                        }
+                        else {
+                            dataSample = o;
+                        }
                     }
                 };
             }
