@@ -1,0 +1,14 @@
+// Copyright 2002-2011, University of Colorado
+package edu.colorado.phet.simsharing;
+
+import java.io.Serializable;
+
+/**
+ * @author Sam Reid
+ */
+public class TeacherDataRequest implements Serializable {
+
+    public TeacherDataRequest() {
+    }
+
+}
